<resources>
    <string name="app_name">COD Weapons</string>

    <string name="login_fragment">Call of Duty Weapons</string>
    <string name="username_hint">Username</string>
    <string name="signin_button">Sign in</string>

    <string name="signout_button">Sign out</string>
    <string name="user">User</string>
    <string name="btnMW">MW</string>
    <string name="btnBOCW">BOCW</string>
    <string name="btnMWII">MWII</string>
    <string name="btnMWIII">MWIII</string>

    <string name="weapon">Weapon</string>
    <string name="category">Category</string>
    <string name="caliber">Caliber</string>
</resources>