<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.MenuFragment"

    android:background="@color/dark">

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/secundario"
        android:text="@string/signout_button"
        android:textSize="12sp"
        android:textColor="@color/light"/>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toRightOf="@+id/btnSignOut"
        app:layout_constraintTop_toTopOf="@+id/btnSignOut"
        android:text="@string/user"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/light"/>

    <Button
        android:id="@+id/btnMW"
        android:layout_width="175dp"
        android:layout_height="125dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnBOCW"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/primario"
        android:text="@string/btnMW"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/light"/>
    <Button
        android:id="@+id/btnBOCW"
        android:layout_width="175dp"
        android:layout_height="125dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/btnMW"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/primario"
        android:text="@string/btnBOCW"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/light"/>

</androidx.constraintlayout.widget.ConstraintLayout>