<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivWeapon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWeapon"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/ivWeapon"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="12dp"
        android:text="@string/weapon"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/light"
        tools:text="Modelo" />
    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="@+id/tvWeapon"
        app:layout_constraintStart_toEndOf="@id/tvWeapon"
        android:text="@string/category"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/md_theme_outline"
        tools:text="Categoria" />
    <TextView
        android:id="@+id/tvCaliber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory"
        app:layout_constraintStart_toEndOf="@id/tvWeapon"
        android:text="@string/caliber"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/md_theme_outline"
        tools:text="Calibre" />

    <Button
        android:id="@+id/btnAddFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ivWeapon"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/md_theme_outline"/>

</androidx.constraintlayout.widget.ConstraintLayout>